--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-
+It is required to design an airplane boarding system based on simple microcontroller system. 
+The passenger has to scan the boarding pass or enter a 3 digit unique identifier on the gate keypad. The 
+gate  checks the  correctness  of the  input  data  over  the  airport  network.  If the  passenger  is  to  board  of 
+the flight in question, a greeting message is displayed and the gate is open. The flight is identified by the 
+first  digit  in  the  entered  unique  identifier,  and  the  guest  identification  is  in  the  following  2  digits.  It  is 
+assumed that the flight capacity is only 100 persons on board. The Flight is marked complete if and only 
+if the pilot and first officer are on board and all passengers have boarded. The pilot and first officer of all 
+flights are always identified as “00” and “01” respectively in the passengers’ list. All flights are operated 
+with another 8 crew members. 
+Safety  circuit  for  the  gate  is  obligatory  in  the  system  design.  It  is  always  recommended  to  check  the 
+motor  temperature  and  alarm  in  case  of over  heat. Also,  it  is mandatory to  keep  the  gate  open  during 
+the passenger crossing period, especially in case of infant strollers passing.
