--- a/README
+++ b/README
@@ -10,3 +10,10 @@ with another 8 crew members.
 Safety  circuit  for  the  gate  is  obligatory  in  the  system  design.  It  is  always  recommended  to  check  the 
 motor  temperature  and  alarm  in  case  of over  heat. Also,  it  is mandatory to  keep  the  gate  open  during 
 the passenger crossing period, especially in case of infant strollers passing.
+
+## The branches of the code are:
+ * Keypad
+ * Motors
+ * LCD
+ * Ethernet
+ * Control
